[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "parity-aware-bpe"
version = "0.1.0"
description = "Parity-aware BPE implementation."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
      { name = "Rico Sennrich", email = "rico.sennrich@uzh.ch" },
      { name = "Negar Foroutan", email = "negar.foroutan@epfl.ch"},
      { name = "Clara Meister", email = "clara.meister@inf.ethz.ch"}

]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Text Processing',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "mock",
    "tqdm",
    "numpy",
    "tokenizers"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
exclude = ["output*"]